--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
                         <h4>George <span class="shead">May 3, 2015, 6:32 PM</span></h4>
                         <p>Great blog post! Following</p>
                     </div>
-
+                    <div class="cl"></div>
                 </div>
                 <div class="cl"></div>
             </article>
